--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>hadoop-mapreduce-client-core</artifactId>
             <version>3.1.0</version> <!-- Use the same version as your other Hadoop dependencies -->
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
     </dependencies>
 </project>
