--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.altinity.parquet.regression</groupId>
     <artifactId>parquet-regression</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.5</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
