--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,6 +13,8 @@ RUN apt-get update && apt-get install -y \
     curl \
     wget \
     ca-certificates \
+    fakeroot \
+    binutils \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set Java home
