--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Install system dependencies
 # Install dependencies for building Thrift from source
 RUN apt-get update && apt-get install -y \
-    openjdk-17-jdk \
+    openjdk-17-jdk-headless \
     maven \
     git \
     curl \
