--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
 name: Build and Publish .deb Package
 
 on:
-  push:
-    tags:
-      - 'v*'  # Trigger the workflow when a version tag is pushed (e.g., v1.0.0)
+  workflow_dispatch:
+
 
 jobs:
   build-deb:
