--- a/build
+++ b/build
@@ -4,7 +4,7 @@ echo "Build parquet-generator-builder Docker image"
 docker build -t parquet-generator-builder docker/.
 
 echo "Build parquet-generator"
-docker run -it \
+docker run \
     -v .:/opt/parquet-regression \
     -v ./.m2:/root/.m2 \
     parquet-generator-builder
