--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Give execution permission to the build.sh script
+      # Give execution permission to the build script
       - name: Make build.sh executable
-        run: chmod +x ./build.sh
+        run: chmod +x ./build
 
       # Run the build.sh script to build the Docker image and generate the .deb package
-      - name: Run build.sh
-        run: ./build.sh
+      - name: Run build
+        run: ./build
 
       # Find the generated .deb file in the parquetify directory
       - name: Locate the .deb file
