--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,8 @@ on:
 
 jobs:
   build-deb:
-    runs-on: ubuntu-latest
-
+    runs-on: [self-hosted, x86, type-cpx41, image-x86-app-docker-ce]
+    timeout-minutes: 180
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
