try to release both ARM and AMD

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,25 +8,11 @@ on:
         required: true
 
 jobs:
-  build-deb:
+  create-release:
     runs-on: [self-hosted, on-demand, type-cpx41, image-x86-app-docker-ce]
-    timeout-minutes: 180
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Make build.sh executable
-        run: chmod +x ./build
-
-      - name: Run build
-        run: ./build
-
-      - name: Locate the .deb file
-        id: locate_deb
-        run: |
-          DEB_FILE=$(find ./parquetify -name "parquetify_*_amd64.deb")
-          echo "::set-output name=deb_file::$DEB_FILE"
-
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
@@ -38,12 +24,64 @@ jobs:
           draft: false
           prerelease: false
 
+  build-deb-amd64:
+    runs-on: [self-hosted, on-demand, type-cpx41, image-x86-app-docker-ce]
+    needs: create-release
+    timeout-minutes: 180
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Make build.sh executable
+        run: chmod +x ./build
+
+      - name: Run build for AMD64
+        run: ./build
+
+      - name: Locate the .deb file
+        id: locate_deb
+        run: |
+          DEB_FILE=$(find ./parquetify -name "parquetify_*_amd64.deb")
+          echo "DEB_FILE=$DEB_FILE"
+          echo "::set-output name=deb_file::$DEB_FILE"
+
       - name: Upload .deb to GitHub Releases
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
           asset_path: ${{ steps.locate_deb.outputs.deb_file }}
           asset_name: parquetify_${{ github.event.inputs.version }}_amd64.deb
+          asset_content_type: application/x-debian-package
+
+  build-deb-arm64:
+    runs-on: [self-hosted, on-demand, type-cax41, image-arm-app-docker-ce]
+    needs: create-release
+    timeout-minutes: 180
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Make build.sh executable
+        run: chmod +x ./build
+
+      - name: Run build for ARM64
+        run: ./build arm
+
+      - name: Locate the .deb file
+        id: locate_deb
+        run: |
+          DEB_FILE=$(find ./parquetify -name "parquetify_*_arm64.deb")
+          echo "DEB_FILE=$DEB_FILE"
+          echo "::set-output name=deb_file::$DEB_FILE"
+
+      - name: Upload .deb to GitHub Releases
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: ${{ steps.locate_deb.outputs.deb_file }}
+          asset_name: parquetify_${{ github.event.inputs.version }}_arm64.deb
           asset_content_type: application/x-debian-package
