--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+      - name: ⤵️ Checkout code
+        uses: actions/checkout@v3
+
       - name: 📦 Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
