--- a/parquetify/src/schema-example/json/hadoop_configurations.json
+++ b/parquetify/src/schema-example/json/hadoop_configurations.json
@@ -8,10 +8,12 @@
     "encodings": ["PLAIN"],
     "bloomFilter": "all"
   },
-  "hadoopConfigs": {
-    "parquet.compression": "UNCOMPRESSED",
-    "parquet.enable.dictionary": "true",
-    "parquet.page.size": "1048576"
+  "hadoop": {
+    "options": {
+      "parquet.compression": "UNCOMPRESSED",
+      "parquet.enable.dictionary": "true",
+      "parquet.page.size": "1048576"
+    }
   },
   "schema": [
     {
